compiler/testData/cli/jvm/XjspecifyAnnotations/jspecifyDefault.out
compiler/testData/cli/jvm/XjspecifyAnnotations/jspecifyUsage.kt:2:11: error: null cannot be a value of a non-null type 'kotlin.String'.
    a.foo(null)
          ^^^^
COMPILATION_ERROR
